[project]
name = "orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Langenborg", email = "erik.langenborg@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0.0",
    "textual>=4.0.0",
]

[project.scripts]
orch = "orch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
